Сделал: Герой, преимущества, чем мы занимаемся

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body class="page">
     <!--Верхняя линия-->
-    <header class="header-main">
+    <!-- <header class="header-main">
       <div class="main-nav container">
         <nav class="navigation">
           <a class="logo-main link" href="./">
@@ -62,18 +62,16 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <!--Шапка-->
     <main>
       <section class="hero">
         <div class="container">
-          <div class="hero-container">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button class="hero-btn border-btn" type="button" data-modal-open>
-              Заказать услугу
-            </button>
-          </div>
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-btn border-btn" type="button" data-modal-open>
+            Заказать услугу
+          </button>
         </div>
       </section>
 
@@ -83,7 +81,7 @@
           <h2 class="visually-hidden">Особенности и преимущества</h2>
           <ul class="features-list">
             <li class="features-list-item list">
-              <div class="tumb">
+              <div class="features-list-icon">
                 <svg width="70" height="70" class="features-icon">
                   <use href="./img/sprite.svg#icon-antenna"></use>
                 </svg>
@@ -96,7 +94,7 @@
             </li>
 
             <li class="features-list-item list">
-              <div class="tumb">
+              <div class="features-list-icon">
                 <svg width="70" height="70" class="features-icon">
                   <use href="./img/sprite.svg#icon-clock"></use>
                 </svg>
@@ -109,7 +107,7 @@
             </li>
 
             <li class="features-list-item list">
-              <div class="tumb">
+              <div class="features-list-icon">
                 <svg width="70" height="70" class="features-icon">
                   <use href="./img/sprite.svg#icon-diagram"></use>
                 </svg>
@@ -122,7 +120,7 @@
             </li>
 
             <li class="features-list-item list">
-              <div class="tumb">
+              <div class="features-list-icon">
                 <svg width="70" height="70" class="features-icon">
                   <use href="./img/sprite.svg#icon-astronaut"></use>
                 </svg>
@@ -185,7 +183,7 @@
       </section>
 
       <!--Наша команда-->
-      <section class="our-team">
+      <!-- <section class="our-team">
         <div class="container">
           <h2 class="title-for-two-blocks">Наша команда</h2>
           <ul class="our-team-list">
@@ -398,10 +396,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--Постоянные клиенты-->
-      <section class="regular-clients">
+      <!-- <section class="regular-clients">
         <div class="container">
           <h2 class="title-for-two-blocks">Постоянные клиенты</h2>
           <ul class="regular-list">
@@ -449,14 +447,14 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!--Подвал-->
-    <footer class="basement">
-      <div class="container">
-        <div class="blok-footer">
-          <div class="first-blok-footer">
+    <!-- <footer class="basement"> -->
+    <!-- <div class="container"> -->
+    <!-- <div class="blok-footer">
+          <!-- <div class="first-blok-footer">
             <a class="logo-main basement-logo link" href="./">
               <span class="logo-blue">Web</span>Studio
             </a>
@@ -479,10 +477,10 @@
                 </a>
               </li>
             </ul>
-          </div>
+          </div> -->
 
-          <!--Присоединяйтесь-->
-          <div class="join-us">
+    <!--Присоединяйтесь-->
+    <!-- <div class="join-us">
             <p class="join-us-text">присоединяйтесь</p>
             <ul class="join-us-list">
               <li class="join-us-item list">
@@ -514,10 +512,10 @@
                 </a>
               </li>
             </ul>
-          </div>
+          </div> -->
 
-          <!--подписка-->
-          <div class="subscribe">
+    <!--подписка-->
+    <!-- <div class="subscribe">
             <p class="subscribe-text">Подпишитесь на рассылку</p>
             <form
               action="#"
@@ -543,13 +541,14 @@
                 </svg>
               </button>
             </form>
-          </div>
-        </div>
-      </div>
-    </footer>
+          </div> -->
+    <!-- </div> -->
+
+    <!-- </div> -->
+    <!-- </footer> -->
 
     <!-- MODAL -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="backdrop-btn" data-modal-close>
           <svg class="backdrop-img" width="18" height="18">
@@ -640,7 +639,8 @@
           </div>
         </form>
       </div>
-    </div>
+    </div> -->
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
