Сделал моя команда, постоянные кл. и начал футер

--- a/index.html
+++ b/index.html
@@ -183,18 +183,64 @@
       </section>
 
       <!--Наша команда-->
-      <!-- <section class="our-team">
+      <section class="our-team">
         <div class="container">
           <h2 class="title-for-two-blocks">Наша команда</h2>
           <ul class="our-team-list">
             <li class="our-team-item list">
-              <img
-                class="our-team-img"
-                src="./img/our-team/igor-demyanenko.jpg"
-                alt="Игорь Демьяненко"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./img/our-team/igor-demyanenko.webp    1x,
+                    ./img/our-team/igor-demyanenko@2x.webp 2x
+                  "
+                  media="(min-width: 1200px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./img/our-team/igor-demyanenko.jpg    1x,
+                    ./img/our-team/igor-demyanenko@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+
+                <source
+                  srcset="
+                    ./img/our-team/igor-demyanenko-tab.webp    1x,
+                    ./img/our-team/igor-demyanenko-tab@2x.webp 2x
+                  "
+                  media="(min-width: 768px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./img/our-team/igor-demyanenko-tab.jpg    1x,
+                    ./img/our-team/igor-demyanenko-tab@2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./img/our-team/igor-demyanenko-tel.webp    1x,
+                    ./img/our-team/igor-demyanenko-tel@2x.webp 2x
+                  "
+                  media="(min-width: 480px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="./img/our-team/igor-demyanenko-tel@2x.jpg 2x"
+                  media="(min-width: 480px)"
+                />
+
+                <img
+                  class="our-team-img"
+                  src="./img/our-team/igor-demyanenko-tel.jpg"
+                  alt="Игорь Демьяненко"
+                />
+              </picture>
+
               <div class="our-team-description">
                 <h3 class="our-team-title">Игорь Демьяненко</h3>
                 <p class="our-team-prof" lang="en">Product Designer</p>
@@ -240,13 +286,59 @@
             </li>
 
             <li class="our-team-item list">
-              <img
-                class="our-team-img"
-                src="./img/our-team/olga-repina.jpg"
-                alt="Ольга Репина"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./img/our-team/olga-repina.webp    1x,
+                    ./img/our-team/olga-repina@2x.webp 2x
+                  "
+                  media="(min-width: 1200px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./img/our-team/olga-repina.jpg    1x,
+                    ./img/our-team/olga-repina@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+
+                <source
+                  srcset="
+                    ./img/our-team/olga-repina-tab.webp    1x,
+                    ./img/our-team/olga-repina-tab@2x.webp 2x
+                  "
+                  media="(min-width: 768px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./img/our-team/olga-repina-tab.jpg    1x,
+                    ./img/our-team/olga-repina-tab@2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./img/our-team/olga-repina-tel.webp    1x,
+                    ./img/our-team/olga-repina-tel@2x.webp 2x
+                  "
+                  media="(min-width: 480px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="./img/our-team/olga-repina-tel@2x.jpg 2x"
+                  media="(min-width: 480px)"
+                />
+
+                <img
+                  class="our-team-img"
+                  src="./img/our-team/olga-repina-tel.jpg"
+                  alt="Ольга Репина"
+                />
+              </picture>
+
               <div class="our-team-description">
                 <h3 class="our-team-title">Ольга Репина</h3>
                 <p class="our-team-prof" lang="en">Frontend Developer</p>
@@ -292,13 +384,59 @@
             </li>
 
             <li class="our-team-item list">
-              <img
-                class="our-team-img"
-                src="./img/our-team/nikolay-tarasov.jpg"
-                alt="Николай Тарасов"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./img/our-team/nikolay-tarasov.webp    1x,
+                    ./img/our-team/nikolay-tarasov@2x.webp 2x
+                  "
+                  media="(min-width: 1200px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./img/our-team/nikolay-tarasov.jpg    1x,
+                    ./img/our-team/nikolay-tarasov@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+
+                <source
+                  srcset="
+                    ./img/our-team/nikolay-tarasov-tab.webp    1x,
+                    ./img/our-team/nikolay-tarasov-tab@2x.webp 2x
+                  "
+                  media="(min-width: 768px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./img/our-team/nikolay-tarasov-tab.jpg    1x,
+                    ./img/our-team/nikolay-tarasov-tab@2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./img/our-team/nikolay-tarasov-tel.webp    1x,
+                    ./img/our-team/nikolay-tarasov-tel@2x.webp 2x
+                  "
+                  media="(min-width: 480px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="./img/our-team/nikolay-tarasov-tel@2x.jpg 2x"
+                  media="(min-width: 480px)"
+                />
+
+                <img
+                  class="our-team-img"
+                  src="./img/our-team/nikolay-tarasov-tel.jpg"
+                  alt="Николай Тарасов"
+                />
+              </picture>
+
               <div class="our-team-description">
                 <h3 class="our-team-title">Николай Тарасов</h3>
                 <p class="our-team-prof" lang="en">Marketing</p>
@@ -344,13 +482,59 @@
             </li>
 
             <li class="our-team-item list">
-              <img
-                class="our-team-img"
-                src="./img/our-team/mikhail-yermakov.jpg"
-                alt="Михаил Ермаков"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./img/our-team/mikhail-yermakov.webp    1x,
+                    ./img/our-team/mikhail-yermakov@2x.webp 2x
+                  "
+                  media="(min-width: 1200px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./img/our-team/mikhail-yermakov.jpg    1x,
+                    ./img/our-team/mikhail-yermakov@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+
+                <source
+                  srcset="
+                    ./img/our-team/mikhail-yermakov-tab.webp    1x,
+                    ./img/our-team/mikhail-yermakov-tab@2x.webp 2x
+                  "
+                  media="(min-width: 768px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./img/our-team/mikhail-yermakov-tab.jpg    1x,
+                    ./img/our-team/mikhail-yermakov-tab@2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./img/our-team/mikhail-yermakov-tel.webp    1x,
+                    ./img/our-team/mikhail-yermakov-tel@2x.webp 2x
+                  "
+                  media="(min-width: 480px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="./img/our-team/mikhail-yermakov-tel@2x.jpg 2x"
+                  media="(min-width: 480px)"
+                />
+
+                <img
+                  class="our-team-img"
+                  src="./img/our-team/mikhail-yermakov-tel.jpg"
+                  alt="Михаил Ермаков"
+                />
+              </picture>
+
               <div class="our-team-description">
                 <h3 class="our-team-title">Михаил Ермаков</h3>
                 <p class="our-team-prof" lang="en">UI Designer</p>
@@ -396,10 +580,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--Постоянные клиенты-->
-      <!-- <section class="regular-clients">
+      <section class="regular-clients">
         <div class="container">
           <h2 class="title-for-two-blocks">Постоянные клиенты</h2>
           <ul class="regular-list">
@@ -447,14 +631,14 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!--Подвал-->
-    <!-- <footer class="basement"> -->
-    <!-- <div class="container"> -->
-    <!-- <div class="blok-footer">
-          <!-- <div class="first-blok-footer">
+    <footer class="basement">
+      <div class="container">
+        <div class="blok-footer">
+          <div class="first-blok-footer">
             <a class="logo-main basement-logo link" href="./">
               <span class="logo-blue">Web</span>Studio
             </a>
@@ -477,10 +661,10 @@
                 </a>
               </li>
             </ul>
-          </div> -->
+          </div>
 
-    <!--Присоединяйтесь-->
-    <!-- <div class="join-us">
+          <!--Присоединяйтесь-->
+          <div class="join-us">
             <p class="join-us-text">присоединяйтесь</p>
             <ul class="join-us-list">
               <li class="join-us-item list">
@@ -512,10 +696,10 @@
                 </a>
               </li>
             </ul>
-          </div> -->
+          </div>
 
-    <!--подписка-->
-    <!-- <div class="subscribe">
+          <!--подписка-->
+          <div class="subscribe">
             <p class="subscribe-text">Подпишитесь на рассылку</p>
             <form
               action="#"
@@ -534,18 +718,19 @@
                 />
               </div>
 
-              <button type="submit" class="subscribe-btn">
-                Подписаться
-                <svg width="24" height="24" class="subscribe-icon">
-                  <use href="./img/sprite.svg#icon-send"></use>
-                </svg>
-              </button>
+              <div class="subscribe-btn-center">
+                <button type="submit" class="subscribe-btn">
+                  Подписаться
+                  <svg width="24" height="24" class="subscribe-icon">
+                    <use href="./img/sprite.svg#icon-send"></use>
+                  </svg>
+                </button>
+              </div>
             </form>
-          </div> -->
-    <!-- </div> -->
-
-    <!-- </div> -->
-    <!-- </footer> -->
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- MODAL -->
     <!-- <div class="backdrop is-hidden" data-modal>
