--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
-  <body class="page-portfolio">
+  <body>
     <!--Верхняя линия-->
-    <header class="header-main portfolio-border">
+    <!-- <header class="header-main portfolio-border">
       <div class="container">
         <nav class="navigation">
           <a class="logo-main logo-portfolio link" href="./">
@@ -60,7 +60,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <!--Блок Портфолио-->
     <main>
@@ -99,7 +99,7 @@
           </ul>
 
           <!--Портфолио-->
-          <ul class="work-examples-list">
+          <!-- <ul class="work-examples-list">
             <li class="work-examples-item list">
               <a class="work-examples-link link" href="#">
                 <div class="tehnocrack-card">
@@ -338,7 +338,7 @@
                 </div>
               </a>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </section>
     </main>
@@ -427,12 +427,14 @@
                 />
               </div>
 
-              <button type="submit" class="subscribe-btn">
-                Подписаться
-                <svg width="24" height="24" class="subscribe-icon">
-                  <use href="./img/sprite.svg#icon-send"></use>
-                </svg>
-              </button>
+              <div class="subscribe-btn-center">
+                <button type="submit" class="subscribe-btn">
+                  Подписаться
+                  <svg width="24" height="24" class="subscribe-icon">
+                    <use href="./img/sprite.svg#icon-send"></use>
+                  </svg>
+                </button>
+              </div>
             </form>
           </div>
         </div>
