--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
-  <body class="page">
+  <body>
     <!--Верхняя линия-->
     <!-- <header class="header-main">
       <div class="main-nav container">
