--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 
   <body>
     <!--Верхняя линия-->
-    <!-- <header class="header-main portfolio-border">
+    <header class="header-main portfolio-border">
       <div class="container">
         <nav class="navigation">
           <a class="logo-main logo-portfolio link" href="./">
@@ -60,7 +60,7 @@
           </li>
         </ul>
       </div>
-    </header> -->
+    </header>
 
     <!--Блок Портфолио-->
     <main>
