--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <ul class="contacts">
           <li class="contacts-list list">
             <a class="contacts-link link" href="mailto:info@devstudio.com">
-              <svg width="16" height="12" class="contacts-icon">
+              <svg class="contacts-icon mail-icon">
                 <use href="./img/sprite.svg#icon-mail-icon"></use>
               </svg>
               info@devstudio.com
@@ -60,7 +60,7 @@
           </li>
           <li class="contacts-list list">
             <a class="contacts-link link" href="tel:+380961111111">
-              <svg width="10" height="16" class="contacts-icon">
+              <svg class="contacts-icon tel-icon">
                 <use href="./img/sprite.svg#icon-telephone-icon"></use>
               </svg>
               +38 096 111 11 11
@@ -799,7 +799,7 @@
     </footer>
 
     <!-- MODAL -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="backdrop-btn" data-modal-close>
           <svg class="backdrop-img" width="18" height="18">
@@ -878,9 +878,9 @@
               class="check-input"
             />
             <label for="agree-send" class="check"
-              >Соглашаюсь с рассылкой и принимаю
-              <a href="#" target="_blank" class="check-text"
-                >Условия договора</a
+              ><span>Соглашаюсь с рассылкой</span> и принимаю&nbsp;
+              <a href="#" target="_blank" class="check-text">
+                Условия договора</a
               >
             </label>
           </div>
@@ -890,7 +890,7 @@
           </div>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
