--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
   <body>
     <!--Верхняя линия-->
     <header class="header-main portfolio-border">
-      <div class="container">
+      <div class="main-nav container">
         <nav class="navigation">
           <a class="logo-main logo-portfolio link" href="./">
             <span class="logo-blue">Web</span>Studio
@@ -41,24 +41,90 @@
           </ul>
         </nav>
 
+        <button type="button" class="burger-btn" data-menu-button>
+          <svg class="burger-icon">
+            <use href="./img/sprite.svg#burger-icon"></use>
+          </svg>
+        </button>
+
         <ul class="contacts">
           <li class="contacts-list list">
-            <a class="contacts-link link" href="mailto:info@example.com">
-              <svg width="16" height="12" class="contacts-icon">
+            <a class="contacts-link link" href="mailto:info@devstudio.com">
+              <svg class="contacts-icon mail-icon">
                 <use href="./img/sprite.svg#icon-mail-icon"></use>
               </svg>
-              info@example.com
+              info@devstudio.com
             </a>
           </li>
           <li class="contacts-list list">
             <a class="contacts-link link" href="tel:+380961111111">
-              <svg width="10" height="16" class="contacts-icon">
+              <svg class="contacts-icon tel-icon">
                 <use href="./img/sprite.svg#icon-telephone-icon"></use>
               </svg>
               +38 096 111 11 11
             </a>
           </li>
         </ul>
+      </div>
+
+      <!-- Мобильное меню -->
+      <div class="mobile-menu" data-menu>
+        <button type="button" class="mobile-menu-close-btn" data-menu-close>
+          <svg class="mobile-menu-close-icon">
+            <use href="./img/sprite.svg#mobile-menu-close-btn"></use>
+          </svg>
+        </button>
+
+        <div class="mobile-menu-flex">
+          <ul class="mobile-menu-nav">
+            <li class="mobile-menu-nav-item list">
+              <a class="mobile-menu-nav-link link" href="./index.html">
+                Студия
+              </a>
+            </li>
+            <li class="mobile-menu-nav-item list">
+              <a class="mobile-menu-nav-link link" href="./portfolio.html">
+                <span class="studio-blue">Портфолио</span>
+              </a>
+            </li>
+            <li class="mobile-menu-nav-item list">
+              <a class="mobile-menu-nav-link link" href=""> Контакты </a>
+            </li>
+          </ul>
+
+          <ul class="mobile-contacts">
+            <li class="mobile-contacts-list list">
+              <a class="mobile-contacts-tel-link link" href="tel:+380961111111">
+                +38 096 111 11 11
+              </a>
+            </li>
+            <li class="mobile-contacts-list list">
+              <a
+                class="mobile-contacts-link link"
+                href="mailto:info@devstudio.com"
+              >
+                info@devstudio.com
+              </a>
+            </li>
+          </ul>
+
+          <ul class="mobile-social">
+            <li class="mobile-social-list list">
+              <a href="" class="mobile-social-link padding-left link">
+                Instagram
+              </a>
+            </li>
+            <li class="mobile-social-list list">
+              <a href="" class="mobile-social-link link"> Twitter </a>
+            </li>
+            <li class="mobile-social-list list">
+              <a href="" class="mobile-social-link link"> Facebook </a>
+            </li>
+            <li class="mobile-social-list list">
+              <a href="" class="mobile-social-link link"> LinkedIn </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
@@ -856,5 +922,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
